# fantasy-baseball

./: README.md  draft.py  fantasy-baseball.code-workspace  main.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
fantasy_baseball/: config.py  fetch_injuries.py  injuries.py  lineup.py  manage.py  matchup.py  pitching.py  positions.py  roster.py  valuations.py
inputs/: hitters.csv  my_roster.txt  pitchers.csv
outputs/: 2026-03-12_auction_board.txt
