[project]
name = "fantasy-baseball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.7",
]
